--- a/static/css/organisering.css
+++ b/static/css/organisering.css
@@ -33,6 +33,7 @@
 	background-repeat: no-repeat;
 	margin: 0;
 	padding: 0;
+	vertical-align: top;
 }
 
 #body div.topBox, #body div.middleBox, #body div.footBox {
